--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-setup",
+  "name": "search-and-read",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Search for something and you will see relevant picture and articles",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development --open",
@@ -16,15 +15,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aman-kumar-rai/react-setup.git"
+    "url": "git+https://github.com/aman-kumar-rai/search-and-read.git"
   },
   "keywords": [],
   "author": "Aman Kumar",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/aman-kumar-rai/react-setup/issues"
+    "url": "https://github.com/aman-kumar-rai/search-and-read/issues"
   },
-  "homepage": "https://github.com/aman-kumar-rai/react-setup#readme",
+  "homepage": "https://aman-kumar-rai.github.io/search-and-read",
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
